--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Attach styles.css file for applying CSS styles -->
   <link rel="stylesheet" href="assets/styles.css">
   <title>DevWeek - Conferences & Events</title>
 </head>
 <body>
   <h1>Welcome to DevWeek</h1>
+  <!-- Attach scripts.js file for adding interactivity features -->
   <script src="assets/scripts.js"></script>
+
 </body>
 </html>
