Add styles for reset, font family, color palette, headline and main program sections.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,78 @@
   <title>DevWeek - Conferences & Events</title>
 </head>
 <body>
-  <h1>Welcome to DevWeek</h1>
+  <!--HEADER: Navegation-->
+  <head>
+  </head>
+
+  <!--MAIN CONTENT-->
+  <main>
+    <div class="banner">
+      <div class="container">
+        <p class="slogan">"Learn. Connect. Experience"</p>
+        <h1>DEVELOPER WEEK<br>GLOBAL SUMMIT<br>2022</h1>
+        <p>
+          Join 8,000+ professionals at the World's Largest Developer &
+          Engineering Expo + Conference Series to discover the latest in
+          developer technologies, languages, platforms, and tools. This year
+          is taking place in September, in California.
+        </p>
+        <p>
+          2022.09.19(THU) ~ 23(FRI)
+        </p>
+        <p>
+          @ Oakland Convention Center
+        </p>
+
+      </div> <!--EOF .container -->
+    </div> <!--EOF .banner -->
+  </main>
+
+  <!--MAIN PROGRAM SECTION-->
+  <section id="program">
+    <div class="container">
+      <ul>
+        <li>
+          <span>Lecture</span>
+          <p>
+            Listen to the speakers from various
+            countries about how the new technologies
+            are improving the way we create software.
+          </p>
+        </li>
+        <li>
+          <span>DW Exhibition</span>
+          <p>
+            Take a look at the latest releases for
+            the most used programming languages.
+          </p>
+        </li>
+        <li>
+          <span>Forum</span>
+          <p>
+            Have time to share your thoughts and
+            opinions with experts for each topic.
+          </p>
+        </li>
+        <li>
+          <span>Workshop</span>
+          <p>
+            Try creating your own projects using
+            open source software rather than just
+            watching.
+          </p>
+        </li>
+        <li>
+          <span>DW Ignite</span>
+          <p>
+            Get opportunities to network with DW
+            affiliates around the world, also after
+            the summit.
+          </p>
+        </li>
+      </ul>
+    </div> <!--EOF .container-->
+  </section>
   <!-- Attach scripts.js file for adding interactivity features -->
   <script src="assets/scripts.js"></script>
 
