Add content/styles to Headline & Program sections.

--- a/index.html
+++ b/index.html
@@ -14,22 +14,21 @@
   </head>
 
   <!--MAIN CONTENT-->
-  <main>
+  <main id="#headline">
     <div class="banner">
       <div class="container">
-        <p class="slogan">"Learn. Connect. Experience"</p>
-        <h1>DEVELOPER WEEK<br>GLOBAL SUMMIT<br>2022</h1>
-        <p>
+        <p class="slogan">< Learn. Connect. Experience /> </p>
+        <h1 class="event-title">DEVELOPER WEEK<br>GLOBAL SUMMIT<br>2022</h1>
+        <p class="event-text">
           Join 8,000+ professionals at the World's Largest Developer &
           Engineering Expo + Conference Series to discover the latest in
-          developer technologies, languages, platforms, and tools. This year
-          is taking place in September, in California.
+          developer technologies, languages, platforms, and tools.
         </p>
-        <p>
+        <p class="event-date">
           2022.09.19(THU) ~ 23(FRI)
         </p>
-        <p>
-          @ Oakland Convention Center
+        <p class="event-place">
+          @ Oakland Convention Center, Californa USA
         </p>
 
       </div> <!--EOF .container -->
@@ -39,31 +38,45 @@
   <!--MAIN PROGRAM SECTION-->
   <section id="program">
     <div class="container">
+      <h2>Main Program</h2>
+      <hr>
       <ul>
         <li>
-          <span>Lecture</span>
+          <span>
+            <img src="./assets/icons/lecture-icon.svg" alt="">
+          </span>
+          <strong>Lecture</strong>
           <p>
             Listen to the speakers from various
             countries about how the new technologies
-            are improving the way we create software.
+            are improving software.
           </p>
         </li>
         <li>
-          <span>DW Exhibition</span>
+          <span>
+            <img src="./assets/icons/exhibition-icon.svg" alt="">
+          </span>
+          <strong>DW<br>Exhibition</strong>
           <p>
             Take a look at the latest releases for
             the most used programming languages.
           </p>
         </li>
         <li>
-          <span>Forum</span>
+          <span>
+            <img src="./assets/icons/forum-icon.svg" alt="">
+          </span>
+          <strong>Forum</strong>
           <p>
             Have time to share your thoughts and
             opinions with experts for each topic.
           </p>
         </li>
         <li>
-          <span>Workshop</span>
+          <span>
+            <img src="./assets/icons/workshop-icon.svg" alt="">
+          </span>
+          <strong>Workshop</strong>
           <p>
             Try creating your own projects using
             open source software rather than just
@@ -71,7 +84,10 @@
           </p>
         </li>
         <li>
-          <span>DW Ignite</span>
+          <span>
+            <img src="./assets/icons/networking-icon.svg" alt="">
+          </span>
+          <strong>DW Ignite</strong>
           <p>
             Get opportunities to network with DW
             affiliates around the world, also after
@@ -79,6 +95,7 @@
           </p>
         </li>
       </ul>
+      <a class="btn" href="#">Join DW Global Summit 2022</a>
     </div> <!--EOF .container-->
   </section>
   <!-- Attach scripts.js file for adding interactivity features -->
