Add content to speakers section.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <!--MAIN CONTENT-->
-  <main id="#headline">
+  <main id="headline">
     <div class="banner">
       <div class="container">
         <p class="slogan">< Learn. Connect. Experience /> </p>
@@ -51,7 +51,7 @@
             countries about how the new technologies
             are improving software.
           </p>
-        </li>
+        </li> <!--EOF Lecture-->
         <li>
           <span>
             <img src="./assets/icons/exhibition-icon.svg" alt="">
@@ -61,9 +61,9 @@
             Take a look at the latest releases for
             the most used programming languages.
           </p>
-        </li>
+        </li> <!--EOF Exhibitions-->
         <li>
-          <span>
+        <span>
             <img src="./assets/icons/forum-icon.svg" alt="">
           </span>
           <strong>Forum</strong>
@@ -71,7 +71,7 @@
             Have time to share your thoughts and
             opinions with experts for each topic.
           </p>
-        </li>
+        </li> <!--EOF Forum-->
         <li>
           <span>
             <img src="./assets/icons/workshop-icon.svg" alt="">
@@ -82,7 +82,7 @@
             open source software rather than just
             watching.
           </p>
-        </li>
+        </li> <!--EOF Workshop-->
         <li>
           <span>
             <img src="./assets/icons/networking-icon.svg" alt="">
@@ -93,9 +93,85 @@
             affiliates around the world, also after
             the summit.
           </p>
-        </li>
+        </li> <!--EOF Ignites-->
       </ul>
       <a class="btn" href="#">Join DW Global Summit 2022</a>
+    </div> <!--EOF .container-->
+  </section>
+
+  <!--FEATURED SPEAKERS-->
+  <section id="speakers">
+    <div class="container">
+      <h2>Featured Speakers</h2>
+      <hr>
+      <ul>
+        <li class="speaker">
+          <div class="speaker-photo">
+            <div class="squares"></div>
+            <img src="./assets/imgs/phil-wilkins.jpeg" alt="Phil Wilkins photo">
+          </div>
+          <div class="speaker-info">
+            <strong>Phil Wilkins</strong>
+            <span>
+              <i>Cloud Developer Evangelist @ Oracle</i>
+            </span>
+            <hr class="speaker-dash">
+            <p>
+              Phil has spent over 25 years in the software industry
+              with a breadth of experience in different types of
+              businesses and environments from multinationals to
+              software startups and consumer organizations
+              including a global optical and auditory healthcare
+              provider.
+            </p>
+          </div>
+        </li> <!--EOF Phil Wilkins-->
+        <li class="speaker">
+          <div class="speaker-photo">
+            <div class="squares"></div>
+            <img src="./assets/imgs/jody-bailey.png" alt="Phil Wilkins photo">
+          </div>
+          <div class="speaker-info">
+            <strong>Jody Bailey</strong>
+            <span>
+              <i>Chief Technology Officer @ Stack Overflow</i>
+            </span>
+            <hr class="speaker-dash">
+            <p>
+              Jody Bailey is the Chief Technology Officer at
+              Stack Overflow, leading the Product Engineering,
+              Platform Engineering, InfoSec, and IT teams.
+              Jody has spent the last eight years of his nearly
+              30-year career on tech-leading EdTech software
+              development teams.
+            </p>
+          </div>
+        </li> <!--EOF Jody Bailey-->
+        <li class="speaker">
+          <div class="speaker-photo">
+            <div class="squares"></div>
+            <img src="./assets/imgs/spencer-carver.jpg" alt="Spencer Carver photo">
+          </div>
+          <div class="speaker-info">
+            <strong>Spencer Carver</strong>
+            <span>
+              <i>Software Engineer @ Bloomberg Media</i>
+            </span>
+            <hr class="speaker-dash">
+            <p>
+              Spencer Carver has been passionate about
+              web development since joining Bloomberg in
+              2015. He is responsible for various aspects
+              of bloomberg.com’s subscription products,
+              and is consistently working to improve the
+              first-touch experience of new visitors on
+              the news site through experimentation and
+              clearer on-site experiences.
+            </p>
+          </div>
+        </li> <!--EOF Spencer Carver-->
+      </ul>
+      <a class="btn btn-more" href="#">More</a>
     </div> <!--EOF .container-->
   </section>
   <!-- Attach scripts.js file for adding interactivity features -->
