Add content to Partners & Footer sections.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="speaker-info">
             <strong>Phil Wilkins</strong>
             <span>
-              <i>Cloud Developer Evangelist @ Oracle</i>
+              <i>< Cloud Developer Evangelist @ Oracle /></i>
             </span>
             <hr class="speaker-dash">
             <p>
@@ -134,7 +134,7 @@
           <div class="speaker-info">
             <strong>Jody Bailey</strong>
             <span>
-              <i>Chief Technology Officer @ Stack Overflow</i>
+              <i>< Chief Technology Officer @ Stack Overflow /></i>
             </span>
             <hr class="speaker-dash">
             <p>
@@ -155,7 +155,7 @@
           <div class="speaker-info">
             <strong>Spencer Carver</strong>
             <span>
-              <i>Software Engineer @ Bloomberg Media</i>
+              <i>< Software Engineer @ Bloomberg Media /></i>
             </span>
             <hr class="speaker-dash">
             <p>
@@ -171,9 +171,48 @@
           </div>
         </li> <!--EOF Spencer Carver-->
       </ul>
-      <a class="btn btn-more" href="#">More</a>
+      <a class="btn btn-more">More<span class="arrow-down"></span></a>
     </div> <!--EOF .container-->
   </section>
+
+  <!--PARTNERS-->
+  <section id="partners">
+    <div class="container">
+      <h2>Partners</h2>
+      <hr>
+      <div class="partners-logos">
+        <ul>
+          <li class="partner-logo">
+            <img src="./assets/logos/microsoft-logo.png" alt="Microsoft Logo">
+          </li>
+          <li class="partner-logo">
+            <img src="./assets/logos/oracle-logo.png" alt="Oracle Logo">
+          </li>
+          <li class="partner-logo">
+            <img src="./assets/logos/google-logo.png" alt="Google Logo">
+          </li>
+          <li class="partner-logo">
+            <img src="./assets/logos/stackoverflow-logo.png" alt="Stack Overflow Logo">
+          </li>
+          <li class="partner-logo">
+            <img src="./assets/logos/mozilla-logo.png" alt="Mozilla Logo">
+          </li>
+        </ul>
+        <div class="darker-imgs"></div>
+      </div>
+    </div> <!--EOF .container-->
+  </section>
+
+  <!--FOOTER-->
+  <footer id="footer">
+    <div class="container">
+      <div class="footer-text">
+        <img src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
+        <p>2015 DevWeek <br>Some Rights Reserved.</p>
+      </div>
+    </div> <!--EOF .container-->
+  </footer>
+
   <!-- Attach scripts.js file for adding interactivity features -->
   <script src="assets/scripts.js"></script>
 
