--- a/index.html
+++ b/index.html
@@ -9,15 +9,69 @@
   <title>DevWeek - Conferences & Events</title>
 </head>
 <body>
-  <!--HEADER: Navegation-->
-  <head>
-  </head>
+  <!-- HEADER: Navegation
+  <header id="header">
+    <!--Social Media NAV-->
+    <!-- <nav class="mini-nav">
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./assets/icons/fb-icon.svg" alt="Facebook icon">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./assets/icons/tw-icon.svg" alt="Twitter icon">
+          </a>
+        </li>
+        <li>
+          <a href="#">English</a>
+        </li>
+        <li>
+          <a href="#">My Page</a>
+        </li>
+        <li>
+          <a href="#">Login</a>
+        </li>
+      </ul>
+    </nav> -->
+    <!--EOF Social Media NAV-->
+
+    <!--Main Navigation NAV-->
+    <!-- <nav class="main-nav">
+      <ul>
+        <a class="logo" href="#headline">
+          <img class="logo" src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
+          Dev<strong>Week</strong>
+        </a>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li>
+          <a href="#program">Program</a>
+        </li>
+        <li>
+          <a href="#program">Join</a>
+        </li>
+        <li>
+          <a href="#partners">Sponsor</a>
+        </li>
+        <li>
+          <a href="#headline">News</a>
+        </li>
+        <a class="campaign" href="#headline">DW Campaign</a>
+      </ul>
+    </nav> -->
+    <!--EOF Main Navigation NAV-->
+  <!-- </header> -->
 
   <!--MAIN CONTENT-->
   <main id="headline">
     <div class="banner">
       <div class="container">
-        <p class="slogan">< Learn. Connect. Experience /> </p>
+        <p class="slogan">
+          < Learn. Connect. Experience />
+        </p>
         <h1 class="event-title">DEVELOPER WEEK<br>GLOBAL SUMMIT<br>2022</h1>
         <p class="event-text">
           Join 8,000+ professionals at the World's Largest Developer &
@@ -31,8 +85,10 @@
           @ Oakland Convention Center, Californa USA
         </p>
 
-      </div> <!--EOF .container -->
-    </div> <!--EOF .banner -->
+      </div>
+      <!--EOF .container -->
+    </div>
+    <!--EOF .banner -->
   </main>
 
   <!--MAIN PROGRAM SECTION-->
@@ -56,7 +112,7 @@
           <span>
             <img src="./assets/icons/exhibition-icon.svg" alt="">
           </span>
-          <strong>DW<br>Exhibition</strong>
+          <strong>DW Exhibition</strong>
           <p>
             Take a look at the latest releases for
             the most used programming languages.
@@ -95,7 +151,7 @@
           </p>
         </li> <!--EOF Ignites-->
       </ul>
-      <a class="btn" href="#">Join DW Global Summit 2022</a>
+      <a class="btn btn-join" href="#"></a>
     </div> <!--EOF .container-->
   </section>
 
@@ -138,7 +194,7 @@
             </span>
             <hr class="speaker-dash">
             <p>
-              Jody Bailey is the Chief Technology Officer at
+              Jody is the Chief Technology Officer at
               Stack Overflow, leading the Product Engineering,
               Platform Engineering, InfoSec, and IT teams.
               Jody has spent the last eight years of his nearly
@@ -171,7 +227,7 @@
           </div>
         </li> <!--EOF Spencer Carver-->
       </ul>
-      <a class="btn btn-more">More<span class="arrow-down"></span></a>
+      <a class="btn btn-more"><span class="arrow-icon"></span></a>
     </div> <!--EOF .container-->
   </section>
 
@@ -207,7 +263,7 @@
     <div class="container">
       <div class="footer-text">
         <img src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
-        <p>2015 DevWeek <br>Some Rights Reserved.</p>
+        <p>2022 DevWeek <br>Some Rights Reserved.</p>
       </div>
     </div> <!--EOF .container-->
   </footer>
