Remove the speakers cards, so now they are generated dinamically.

--- a/index.html
+++ b/index.html
@@ -175,73 +175,7 @@
     <div class="container">
       <h2>Featured Speakers</h2>
       <hr>
-      <ul>
-        <li class="speaker">
-          <div class="speaker-photo">
-            <div class="squares"></div>
-            <img src="./assets/imgs/phil-wilkins.jpeg" alt="Phil Wilkins photo">
-          </div>
-          <div class="speaker-info">
-            <strong>Phil Wilkins</strong>
-            <span>
-              <i>< Cloud Developer Evangelist @ Oracle /></i>
-            </span>
-            <hr class="speaker-dash">
-            <p>
-              Phil has spent over 25 years in the software industry
-              with a breadth of experience in different types of
-              businesses and environments from multinationals to
-              software startups and consumer organizations
-              including a global optical and auditory healthcare
-              provider.
-            </p>
-          </div>
-        </li> <!--EOF Phil Wilkins-->
-        <li class="speaker">
-          <div class="speaker-photo">
-            <div class="squares"></div>
-            <img src="./assets/imgs/jody-bailey.png" alt="Phil Wilkins photo">
-          </div>
-          <div class="speaker-info">
-            <strong>Jody Bailey</strong>
-            <span>
-              <i>< Chief Technology Officer @ Stack Overflow /></i>
-            </span>
-            <hr class="speaker-dash">
-            <p>
-              Jody is the Chief Technology Officer at
-              Stack Overflow, leading the Product Engineering,
-              Platform Engineering, InfoSec, and IT teams.
-              Jody has spent the last eight years of his nearly
-              30-year career on tech-leading EdTech software
-              development teams.
-            </p>
-          </div>
-        </li> <!--EOF Jody Bailey-->
-        <li class="speaker">
-          <div class="speaker-photo">
-            <div class="squares"></div>
-            <img src="./assets/imgs/spencer-carver.jpg" alt="Spencer Carver photo">
-          </div>
-          <div class="speaker-info">
-            <strong>Spencer Carver</strong>
-            <span>
-              <i>< Software Engineer @ Bloomberg Media /></i>
-            </span>
-            <hr class="speaker-dash">
-            <p>
-              Spencer Carver has been passionate about
-              web development since joining Bloomberg in
-              2015. He is responsible for various aspects
-              of bloomberg.com’s subscription products,
-              and is consistently working to improve the
-              first-touch experience of new visitors on
-              the news site through experimentation and
-              clearer on-site experiences.
-            </p>
-          </div>
-        </li> <!--EOF Spencer Carver-->
-      </ul>
+      <ul id="speakers-list"></ul>
       <a class="btn btn-more"><span class="arrow-icon"></span></a>
     </div> <!--EOF .container-->
   </section>
