Add home link to the main navbar, it is showed at the mobile menu, in desktop version it is hidden.

--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
       <nav class="main-nav"> <!--Main Navigation NAV-->
         <ul>
           <a class="logo" href="index.html">
-            <img class="logo" src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
+            <img class="img-logo" src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
             Dev<strong>Week</strong>
           </a>
           <li class="x-close">
             <a><img src="./assets/icons/x-close-icon.svg" alt=""></a>
+          </li>
+          <li class="go-home">
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="about.html">About</a>
@@ -64,7 +67,7 @@
             <a href="#program">Program</a>
           </li>
           <li>
-            <a href="#program">Join</a>
+            <a href="#join-button">Join</a>
           </li>
           <li>
             <a href="#partners">Sponsor</a>
@@ -166,7 +169,7 @@
           </p>
         </li> <!--EOF Ignites-->
       </ul>
-      <a class="btn btn-join" href="#"></a>
+      <a class="btn btn-join" href="#" id="join-button"></a>
     </div> <!--EOF .container-->
   </section>
 
