Add comments to navbars beginnings at the header section.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="assets/styles.css">
   <title>DevWeek - Conferences & Events</title>
 </head>
-<body>
+<body id="home">
   <!-- HEADER: Navegation -->
   <header id="header">
-    <!--Social Media NAV-->
+    <!--Burger icon for mobile version-->
     <nav class="burguer-nav">
       <ul>
         <li>
@@ -21,6 +21,7 @@
         </li>
       </ul>
     </nav>
+    <!--Social Media NAV-->
     <nav class="mini-nav">
       <ul>
         <li class="sm-icon">
