Add the headline section to the about page.

--- a/about.html
+++ b/about.html
@@ -84,7 +84,46 @@
     <!--EOF .contain-nav-->
   </header>
 
-  
+    <!--MAIN CONTENT-->
+    <main id="headline">
+      <div class="banner">
+        <div class="container">
+          <p class="slogan">
+            < Learn. Connect. Experience />
+          </p>
+          <h1 class="event-title">DEVELOPER WEEK<br>GLOBAL SUMMIT 2022</h1>
+          <p class="event-text mobile">
+            DevWeek puts the spotlight on new technologies. Companies that
+            participated in past DevWeek events include Google,
+            Facebook, Yelp, Rackspace, IBM, Cloudera, Red Hat, Optimizely,
+            SendGrid, Blackberry, Microsoft, Neo Technology, Eventbrite,
+            Klout, Built.io, Ripple, GNIP, Tagged, HackReactor, and 30+
+            more here!
+          </p>
+          <p class="event-text desktop">
+            DevWeek 2022 is the largest developer conference & event series
+            including the DevWeek 2022 Conference & Expo, 1,000+ attendee
+            hackathon, 800+ attendee tech hiring expo, and a series of
+            workshops, technical talks, and keynotes.<br>
+            Because DevWeek covers all new technologies, our conference
+            and workshops invite you to get intro lessons (or advanced tips
+            and tricks) on technologies like VR Dev, Artificial Intelligence
+            Dev, Blockchain Dev, IoT Dev, Serverless technology, Microservices
+            technology, new JavaScript frameworks, and more.
+          </p>
+          <p class="event-place">
+            Please contact us per Email for any further questions
+            about DW Global Summit 2022!
+          </p>
+          <a href="mailto:dwsummit2022@devweek.dev">dwsummit2022@devweek.dev</a>
+
+        </div>
+        <!--EOF .container -->
+      </div>
+      <!--EOF .banner -->
+    </main>
+
+
   <!--PARTNERS-->
   <section id="partners">
     <div class="container">
