Add content to the page. Update navbar.

--- a/about.html
+++ b/about.html
@@ -64,16 +64,28 @@
           <li class="go-about">
             <a href="about.html">About</a>
           </li>
-          <li>
+          <li class="go-info">
+            <a href="#headline">Info</a>
+          </li>
+          <li class="go-contact">
+            <a href="#contact">Contact</a>
+          </li>
+          <li class="go-program">
             <a href="#program">Program</a>
           </li>
-          <li>
+          <li class="go-join">
             <a href="#join-button">Join</a>
           </li>
-          <li>
+          <li class="go-logo">
+            <a href="#logo-about">Our Logo</a>
+          </li>
+          <li class="go-editions">
+            <a href="#dw-editions">DW Summits</a>
+          </li>
+          <li class="go-partners">
             <a href="#partners">Sponsor</a>
           </li>
-          <li>
+          <li class="go-news">
             <a href="#headline">News</a>
           </li>
           <a class="campaign" href="#headline">DW Campaign</a>
@@ -84,46 +96,100 @@
     <!--EOF .contain-nav-->
   </header>
 
-    <!--MAIN CONTENT-->
-    <main id="headline">
-      <div class="banner">
-        <div class="container">
-          <p class="slogan">
-            < Learn. Connect. Experience />
-          </p>
-          <h1 class="event-title">DEVELOPER WEEK<br>GLOBAL SUMMIT 2022</h1>
-          <p class="event-text mobile">
-            DevWeek puts the spotlight on new technologies. Companies that
-            participated in past DevWeek events include Google,
-            Facebook, Yelp, Rackspace, IBM, Cloudera, Red Hat, Optimizely,
-            SendGrid, Blackberry, Microsoft, Neo Technology, Eventbrite,
-            Klout, Built.io, Ripple, GNIP, Tagged, HackReactor, and 30+
-            more here!
-          </p>
-          <p class="event-text desktop">
-            DevWeek 2022 is the largest developer conference & event series
-            including the DevWeek 2022 Conference & Expo, 1,000+ attendee
-            hackathon, 800+ attendee tech hiring expo, and a series of
-            workshops, technical talks, and keynotes.<br>
-            Because DevWeek covers all new technologies, our conference
-            and workshops invite you to get intro lessons (or advanced tips
-            and tricks) on technologies like VR Dev, Artificial Intelligence
-            Dev, Blockchain Dev, IoT Dev, Serverless technology, Microservices
-            technology, new JavaScript frameworks, and more.
-          </p>
-          <p class="event-place">
-            Please contact us per Email for any further questions
-            about DW Global Summit 2022!
-          </p>
-          <a href="mailto:dwsummit2022@devweek.dev">dwsummit2022@devweek.dev</a>
+  <!--MAIN CONTENT-->
+  <main id="headline">
+    <div class="banner">
+      <div class="container">
+        <p class="slogan mobile">
+          < Learn. Connect. Experience />
+        </p>
+        <h1 class="event-title">DEVELOPER WEEK<br>GLOBAL SUMMIT 2022</h1>
+        <hr class="desktop">
+        <p class="event-text mobile">
+          DevWeek puts the spotlight on new technologies. Companies that
+          participated in past DevWeek events include Google,
+          Facebook, Yelp, Rackspace, IBM, Cloudera, Red Hat, Optimizely,
+          SendGrid, Blackberry, Microsoft, Neo Technology, Eventbrite,
+          Klout, Built.io, Ripple, GNIP, Tagged, HackReactor, and 30+
+          more here!
+        </p>
+        <p class="event-text desktop">
+          DevWeek 2022 is the largest developer conference & event series
+          including the DevWeek 2022 Conference & Expo, 1,000+ attendee
+          hackathon, 800+ attendee tech hiring expo, and a series of
+          workshops, technical talks, and keynotes.<br>
+          Because DevWeek covers all new technologies, our conference
+          and workshops invite you to get intro lessons (or advanced tips
+          and tricks) on technologies like VR Dev, Artificial Intelligence
+          Dev, Blockchain Dev, IoT Dev, Serverless technology, Microservices
+          technology, new JavaScript frameworks, and more.
+        </p>
+        <p class="event-place">
+          Please contact us per Email for any further questions
+          about DW Global Summit 2022!
+        </p>
+        <a id="contact" class="email-link" href="mailto:dwsummit2022@devweek.dev">dwsummit2022@devweek.dev</a>
 
-        </div>
-        <!--EOF .container -->
       </div>
-      <!--EOF .banner -->
-    </main>
+      <!--EOF .container -->
+    </div>
+    <!--EOF .banner -->
+  </main>
 
+  <!--LOGO ABOUT-->
+  <section id="logo-about">
+    <div class="container">
+      <h2 class="section-title">DevWeek Logo <br>How was DW Logo chosen</h2>
+      <hr>
+      <p class="about-text">
+        The logo of DevWeek was decided through the logo competition from 10.Jan to 10.Feb.
+      </p>
+      <p class="about-text desktop">
+        After online public voting and Selection Committee's judging process,
+        the logo created by Justin Leitner won the prize.
+      </p>
+      <p class="about-text desktop">After consultation with the Selection Committee we optimized the
+        prize-winning-logo, so it could be the Oficial DW Logo for the rest
+        of the year or until another public competition is open.
+      </p>
+      <div class="show-logo">
+        <img src="./assets/logos/devweek-logo.png" alt="DevWeek Logo">
+      </div>
+      <p class="about-text">
+        <small>Please do not edit, change, distort, recolor, or reconfigure the DW Logo.</small>
+      </p>
+    </div>
+  </section>
 
+  <section id="dw-editions">
+    <div class="container">
+      <h2 class="section-title">Previous DW Global Summits</h2>
+      <hr>
+      <p class="about-text">Take a look at the last DW Global Summits which took place in New York and in Las Vegas.</p>
+      <div class="previous-events"">
+        <article>
+          <img class="img-previous" src="./assets/imgs/ny-dw-conf-2021.jpg" alt="New York Global Summit 2021">
+          <h3 class="hide-text">2021</h3>
+          <h4 class="hide-text">DW Global Summit 2021 New York</h4>
+          <p class="about-text hidden-text">
+            Listen to exciting product updates, keynotes, panels featuring some of
+            the most prominent people in the developer tools ecosystem, along with
+            fireside chats and expert insights.
+          </p>
+        </article>
+        <article>
+          <img class="img-previous" src="./assets/imgs/lv-dw-conf-2020.jpg" alt="Las Vegas Global Summit 2020">
+          <h3 class="hide-text">2020</h3>
+          <h4 class="hide-text">DW Global Summit 2020 Las Vegas</h4>
+          <p class="about-text hidden-text">
+            A transformative peer-to-peer learning and networking experience, you
+            can expect to hear participants share their own stories, lessons, and
+            project insights.
+          </p>
+        </article>
+      </div>
+    </div>
+  </section>
   <!--PARTNERS-->
   <section id="partners">
     <div class="container">
