Update navbar to have the same as in the about page.

--- a/index.html
+++ b/index.html
@@ -61,19 +61,31 @@
           <li class="go-home">
             <a href="index.html">Home</a>
           </li>
-          <li>
+          <li class="go-about">
             <a href="about.html">About</a>
           </li>
-          <li>
+          <li class="go-info">
+            <a href="#headline">Info</a>
+          </li>
+          <li class="go-contact">
+            <a href="#contact">Contact</a>
+          </li>
+          <li class="go-program">
             <a href="#program">Program</a>
           </li>
-          <li>
+          <li class="go-join">
             <a href="#join-button">Join</a>
           </li>
-          <li>
+          <li class="go-logo">
+            <a href="#logo-about">Our Logo</a>
+          </li>
+          <li class="go-editions">
+            <a href="#dw-editions">DW Summits</a>
+          </li>
+          <li class="go-partners">
             <a href="#partners">Sponsor</a>
           </li>
-          <li>
+          <li class="go-news">
             <a href="#headline">News</a>
           </li>
           <a class="campaign" href="#headline">DW Campaign</a>
@@ -181,6 +193,7 @@
       <hr>
       <ul id="speakers-list"></ul>
       <a class="btn btn-more"><span class="arrow-icon"></span></a>
+      <a class="btn btn-less"><span class="arrow-icon"></span></a>
     </div> <!--EOF .container-->
   </section>
 
