Fix wrap into a span the logo on the footer, to apply a space-between justify property and avoid centering the footer elements.

--- a/index.html
+++ b/index.html
@@ -228,9 +228,12 @@
   <footer id="footer">
     <div class="container">
       <div class="footer-text">
-        <img src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
-        <p>2022 DevWeek <br>Some Rights Reserved.</p>
-      </div>
+        <span>
+         <img class="img-logo" src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
+         Dev<strong>Week</strong>
+       </span>
+       <p>2022 DevWeek <br> Some Rights Reserved.</p>
+     </div>
     </div> <!--EOF .container-->
   </footer>
 
