--- a/about.html
+++ b/about.html
@@ -221,8 +221,11 @@
   <footer id="footer">
     <div class="container">
       <div class="footer-text">
-        <img src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
-        <p>2022 DevWeek <br>Some Rights Reserved.</p>
+         <span>
+          <img class="img-logo" src="./assets/logos/dev-week-logo.svg" alt="DevWeek Logo">
+          Dev<strong>Week</strong>
+        </span>
+        <p>2022 DevWeek <br> Some Rights Reserved.</p>
       </div>
     </div> <!--EOF .container-->
   </footer>
